#170b Dec 27, 1998
 - fixes on 170a
 - missing bc3make.bat added back (although omnetpp is probably _way_ too big
   for BC 3.1 and DOS real mode to handle...)
#170c Dec 30, 1998
 - makefile renamed to makefile.in
#170d-k Jan 1-3, 1999
 - refinements on the coroutine library; stackSize() added to cCoroutine
 - refinements on cPacket
 - restart() of c[Simple]Module removed (was not used)
 - optimizations around timeoutmsg and receive()
 - module state codes reduced to sREADY and sENDED
 - protocol.h added
 - misc bugfixes
#171 Jan 3, 1999
 - stable version
#172a Jan 25, 1999
 - inspector factories added
#172b Jan 26, 1999
 - recordScalar() for recording strings added
#172c-d Jan 26, 1999
 - calls to simulation.error() replaced by opp_error() to avoid having to
   #include csimul.cc (and half the sim. kernel with it) in each file;
   similar for opp_warning() and opp_terminate(). opp_terminate() is similar
   to opp_error(), only it does not include the word "error" in the message.
 - requires updated Envir and user interface libraries
#173 Jan 26, 1999
 - some cleanup
#174 Feb 7, 1999
 - stable version
#175 Jun 21, 1999
  - all sources checked in under CVS
  - makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
  - version.log renamed to ChangeLog
  - removed support for DOS with BC3.1
Jul 10, 1999
  - fixed bug in cQueue and cLinkedList (didn't always increment item count
    on insertion)
  - fixed bug in cPar::info(): didn't handle boolean (B) type
Aug 2, 1999
  - fixed the bug with randseed() [it was an error to call it without
    an argument] and split randseed(long seed=0) into 2 functions:
    randseed() and randseed(long seed).
  - fixed the bug in intrand(r) and genk_intrand(r) that caused division by
    zero if called with r=0L; also, for r<0 it now returns a random number in
    [r+1,0]

  KNOWN BUGS:
     cModule::initialize() doesn't get called with dynamic modules